# Maknassa

./: .gitignore  DISCLAIMER.md  EULA.md  FP_SPIKE_NOTES.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: build.yml  release-installers.yml
app/: README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.vite.json  tsconfig.web.json  vitest.config.ts
app/scripts/: appimage-e2e.mjs  csp-probe.mjs  e2e-flow.mjs  e2e-smoke.mjs  fake-backend.mjs
app/src/main/: backend.ts  index.ts
app/src/preload/: index.ts
app/src/renderer/: index.html
app/src/renderer/src/: App.tsx  env.d.ts
app/src/renderer/src/assets/: main.css
app/src/renderer/src/components/: BlockBar.tsx  ConnectionCard.tsx  FetchSection.tsx  ReactorCard.tsx  ReactorGrid.tsx  SettingsCard.tsx  Toasts.tsx
app/src/renderer/src/hooks/: useSettings.ts  useToasts.ts
app/src/renderer/src/lib/: api.test.ts  api.ts  blocklist.test.ts  blocklist.ts  desktop.ts  jobs.test.ts  jobs.ts  reactions.ts  selection.test.ts  selection.ts  types.ts
packaging/: backend.spec  build.ps1  build.sh  maknassa.spec
packaging/icons/: make_icon.py  maknassa.icns
packaging/linux/: build_appimage.sh
packaging/macos/: build_dmg.sh
packaging/windows/: maknassa.iss
reactions/: __init__.py  _js.py  api.py  backend.py  blocker.py  browser.py  cli.py  config.py  desktop.py  extractor.py  licensing.py  models.py  paths.py  selectors.py  service.py  storage.py  ui_fetch.py
scraper/: __init__.py  browser.py  cli.py  config.py  extractor.py  models.py  storage.py
tests/: conftest.py  test_api.py  test_backend.py  test_blocker.py  test_browser.py  test_browser_collect.py  test_desktop.py  test_extractor.py  test_licensing.py  test_paths.py  test_selectors.py  test_service.py  test_storage.py  test_streamlit_app.py  test_ui_fetch.py
